<resources>
    <string name="app_name">Gerenciador Financeiro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_1">First Item</string>
    <string name="item_2">Second Item</string>
    <string name="cd_logo">logo</string>
    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>
    <string name="lbl_conta">Conta</string>
    <string name="lbl_lancamento">Lançamentos</string>
    <string name="lbl_centro_de_custo">Centro de custo</string>


    <string name="lista_produtos">Lista de Produtos</string>
    <string name="detalhes_produto">Detalhes do Produto</string>
    <string name="dados_produto">Prod.: %1$s - %2$s em estoque - R$ %3$s</string>
    <string name="voltar">Voltar</string>
    <string name="nome_conta">Nome</string>
    <string name="numero_conta">Número</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="centro_de_custo">Centro de custo</string>
    <string name="tipo">Tipo</string>
    <string name="conta">Conta</string>
    <string name="ativo">Ativo</string>

    <string name="title_activity_cadastro_pessoa">CadastroPessoa</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_cadastro_pessoa_min">CadastroPessoaMin</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nome">Nome</string>
    <string name="rua">Rua</string>
    <string name="logradouro">Logradouro</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="cnpj">CNPJ</string>
    <string name="ie">IE</string>
    <string name="matheuzinho">Matheuzinho</string>
    <string name="title_activity_cadastro_bairro">CadastroBairro</string>
    <string name="Plus">+</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="complemento">Complemento</string>
    <string name="novo">Novo</string>
    <string name="second_activity_text">teste de visualização de uma view</string>
    <string name="title_activity_second">SecondActivity</string>

</resources>
