<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.financa.vivan.gerenciadorfinanceiro.CadastroMovimentacao">

    <!-- TODO: Update blank fragment layout --><![CDATA[
    TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

















    ]]>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/valor"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtValor"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/centro_de_custo"
            android:id="@+id/textView6"
            android:layout_weight="0" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCentroCusto"
            android:spinnerMode="dropdown"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/conta"
            android:id="@+id/textView9" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerConta"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:spinnerMode="dropdown"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/descricao"
            android:id="@+id/textView5"
            android:layout_below="@+id/spinnerCentroCusto"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDescricao"
            android:layout_below="@+id/spinnerCentroCusto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal|top" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtDescricao"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/btnCancelar"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:id="@+id/btnCadastrar"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
