<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.financa.vivan.gerenciadorfinanceiro.CadastroConta">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_conta"
            android:id="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNome"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_conta"
            android:id="@+id/textView3"
            android:layout_below="@+id/edtNome"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNumero"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/edtNumero"
            android:layout_alignParentStart="true">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/btnCancelar"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/edtNumero"
                android:layout_toEndOf="@+id/btnCadastrar"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:id="@+id/btnCadastrar"
                android:layout_below="@+id/edtNumero"
                android:layout_alignParentStart="true"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
